# swedish_test_ssn

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
