[package]
categories = ["command-line-utilities"]
name = "swedish_test_ssn"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
authors = ["Ferenyl"]
repository = "https://github.com/ferenyl/swedish_test_ssn"
readme = "README.md"
description = "Get Swedish test ssn from The Swedish Tax Agency (Skatteverket)"
keywords = ["The Swedish Tax Agency", "Skatteverket", "Swedish test ssn"]


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
