[package]
categories = ["command-line-utilities"]
name = "swedish_test_ssn"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
authors = ["Ferenyl"]
repository = "https://github.com/ferenyl/swedish_test_ssn"
readme = "README.md"
description = "Get Swedish test ssn from The Swedish Tax Agency (Skatteverket)"
keywords = ["Skatteverket", "testpersonnummer"]


[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
